styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

body {
  font-family: 'Roboto', sans-serif;
  font-size: 11px;
  display: flex;
  flex-direction: column;
  margin: 0;
  height: 100%; 
  max-height: 100%;
}

#app-menu {
  display: flex;
  background-color: #6290C3;
  font-family: 'Roboto', sans-serif;
  font-size: 12.8333px;
  font-weight: 500;
}

#app-body {
  display: flex;
  flex-grow: 1;
  height: 100%;
  overflow: scroll auto;
}

.menu-item {
  padding: 4px 9px;
  margin: 4px;
  cursor: pointer;
  border-radius: 3px;
  color: #fff;
  width: fit-content;
}
.menu-item:hover {
  background-color: #fff;
  color: #000;
}

table {
  /*font-family: Verdana;*/
  font-size: 10px;
}

td {
  padding-right: 20px;
}
td:last-child {
  width: 100%;
}

.splitter-vert {
  display: flex;
  flex-direction: column;
  height: 100%;
}
.splitter-horiz {
  display: flex;
  flex-direction: row;
  height: 100%;
}
.panel {
  display:flex;
  flex-direction: column;
  overflow-y: auto;
  border: 0px solid #ddd;
  padding: 10px;
}

/*.splitter-vert .panel {
  border-width: 2px 0 2px 0;
}

.splitter-horiz .panel {
  border-width: 0 2px 0 2px;
} */

#description-panel {
  display: flex;
  flex: 0 0 auto;
  min-height: 300px;
  min-width: 100px;
  max-width: 90%;
  background-color: #f8f8f8;
}

#hex-panel {
  display: flex;
  overflow-y: none;
  padding-right: 0;
}

#header {
  display: flex;
  padding: 4px;
  margin-bottom: 8px;
}

#container {
  display: flex;
  flex-direction: row;
}

.section-summary {
  min-width: 100px;
  max-width: 200px;
  border-width: 1px 0px 1px 1px;
  border-radius: 4px;
  margin: 4px;
  padding: 6px;
  font-family: 'Roboto', sans-serif;
  font-size: 11px;
  cursor: pointer;
  color: #555;
}

.section-summary:hover {
  background-color: #eee;
  color: #222;
}

.section-summary.selected {
  background-color: #6290C3;
  border-color: #2D4F76;
  color: #fff;
}
.section-summary.selected:hover {
  background-color: #6290C3;
  color: #fff;
  cursor: default;
}

.section-summary:last-child {
  margin-bottom: 0;
  border-bottom-width: 1px;
}

#navbar {
  display: flex;
  flex-direction: column;
}

#content {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  padding: 10px;
  padding-right: 0;
  overflow: auto;
}

#jumpToContainer {
  display: flex;
  visibility: hidden;
  position: absolute;
  z-index: 1000;
  background-color: #555a;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  padding: 0;
  margin: 0;
  justify-content: center;
  align-items: center;
}

#jumpToContainer input {
  padding: 8px;
  font-family: consolas;
  font-size: 12px;
}

#jumpToContainer input::selection {
  background-color: #efbdc6;
}

#content a, #content a:visited {
  text-decoration: none;
  color: #0073a8;
}

noprint {
  color: #ddd;
}

ul {
  padding-left: 20px;
}

#sizer-bar {
  padding: 0 4px 0 0px;
  border-left: 4px solid #f8f8f8;
  cursor: ew-resize;
}

